force-app/main/default/objects/echosign_dev1__SIGN_Trigger__c/echosign_dev1__SIGN_Trigger__c.object-meta.xml
<CustomObject>
    <label>Trigger</label>
    <nameField>
        <displayFormat>ET-{0000000000}</displayFormat>
        <label>Trigger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>