force-app/main/default/objects/echosign_dev1__SIGN_Trigger__c/fields/echosign_dev1__Agreement__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
    <relationshipLabel>Adobe Acrobat Sign Triggers</relationshipLabel>
    <relationshipName>EchoSign_Triggers</relationshipName>
    <type>Lookup</type>
</CustomField>