force-app/main/default/objects/echosign_dev1__SIGN_Trigger__c/fields/echosign_dev1__Process_Asynchronously__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Process_Asynchronously__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Asynchronously</label>
    <type>Checkbox</type>
</CustomField>