force-app/main/default/objects/echosign_dev1__SIGN_Trigger__c/fields/echosign_dev1__Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>