force-app/main/default/objects/echosign_dev1__SIGN_Trigger__c/fields/echosign_dev1__Status__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>